# filed-ai-assignment

./: .gitignore  README.md  main.py  pyproject.toml  ruff.toml  test.py
