[project]
name = "classifier-assignment"
version = "0.1.0"
description = "Classifier"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
   "fastapi>=0.115.12",
   "python-multipart>=0.0.20",
   "uvicorn>=0.34.2",
    "pdfplumber>=0.10.2",
    "pypdf>=3.17.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
